--- a/Pipfile
+++ b/Pipfile
@@ -9,5 +9,8 @@ djangorestframework = "*"
 djangorestframework-simplejwt = "*"
 django-celery-beat = "*"
 autopep8 = "*"
+requests = "*"
+celery = "*"
+redis = "*"
 
 [dev-packages]
